# jit_explore

./: .gitignore  Cargo.toml  README.md  ROADMAP.md  all_opcodes.json  amx_opcodes.json  index.html
accelerate/16x16/1/base/: estimates.json  tukey.json
accelerate/16x16/1/new/: benchmark.json  sample.json
accelerate/16x16/report/: index.html
accelerate/32/base/: sample.json
accelerate/32/new/: benchmark.json  estimates.json  tukey.json
accelerate/32/report/: index.html
accelerate/64/base/: tukey.json
accelerate/64/new/: benchmark.json  estimates.json  sample.json
accelerate/64/report/: index.html
accelerate/8/base/: estimates.json  tukey.json
accelerate/8/new/: benchmark.json  sample.json
accelerate/8/report/: index.html
accelerate/report/: index.html
benches/: crucible_bench.rs
fused/report/: index.html
fused/sgemm_bias_relu_16x16/base/: estimates.json  tukey.json
fused/sgemm_bias_relu_16x16/new/: benchmark.json  sample.json
fused/sgemm_bias_relu_16x16/report/: index.html
fused/sgemm_relu_16x16/base/: benchmark.json  sample.json  tukey.json
fused/sgemm_relu_16x16/new/: estimates.json
fused/sgemm_relu_16x16/report/: index.html
heist/: amx_runner.c  extract_all.py  heist.py
jit_cold/16x16/report/: index.html
jit_cold/report/: index.html
jit_hot/16x16/report/: index.html
jit_hot/report/: index.html
report/: index.html
scripts/: train_mnist_wide.py
src/: api.rs  cpu_state.rs  crucible.rs  emitter.rs  inference.rs  lib.rs  main.rs  probe.rs  signal_handler.rs  sink.rs  weights.rs
tiled/16x16x16/report/: index.html
tiled/32x32x32/report/: index.html
tiled/48x48x48/report/: index.html
tiled/64x64x64/report/: index.html
tiled/accelerate/report/: index.html
tiled/jit/report/: index.html
tiled/report/: index.html
(+100 files in other folders)
