[package]
name = "sme-jit-core"
version = "0.2.0"
edition = "2024"
description = "Zero-overhead Rust JIT harness for ARM SME on Apple Silicon M4 — beats Accelerate.framework at tile-sized matmuls and tiny-model inference"
repository = "https://github.com/dawn-state/sme-jit-core"
license = "MIT OR Apache-2.0"
keywords = ["arm", "sme", "jit", "matrix", "apple-silicon"]
categories = ["hardware-support", "science"]
readme = "README.md"

# ── Library crate (re-exports harness modules for benchmarks / integration tests)
[lib]
name = "sme_jit_core"
path = "src/lib.rs"

# ── Binary crate (gate runner)
[[bin]]
name = "sme-jit-core"
path = "src/main.rs"

# ── Runtime dependencies
[dependencies]
libc        = "0.2"
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"

# ── Dev / bench dependencies
[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

# ── Benchmark target
[[bench]]
name    = "crucible_bench"
harness = false
